# permisson-service

./: CMakeLists.txt  README.md  install.sh  yoyo.ini
configs/: conf.json  docker-compose.yml  file_system_model.puml  yoyo.ini
configs/migrations/: 20241025_01_tWzWY-create-user-table.py  20241102_01_NRudT-create-users-and-group.sql  20241102_02_ZCVSm-create-schemas-and-db-users.sql  20241102_03_uwty7-getsalt-procedure.sql  20241105_01_c1xpp-find-user.sql  20241105_02_IvWLR-create-user-procedure.sql  20241108_01_kHThF-session-table.sql  20241108_02_CvI6L-session-create.sql  20241108_03_A6eoh-get-token.sql  20241108_04_CHDdk-off-session.sql  20241116_01_ObDQW-group-table.sql  20241116_02_3MEzB-user-to-group.sql  20241117_01_sAk0i-file-table.sql  20241118_01_1E8ID-get-file-id.sql  20241118_01_1E8ID-get-user-rights.sql  20241119_01_ZmQKh-permissions-table.sql  20241119_02_ppdR0-create-file-func.sql  20241120_01_Hxg6v-get-file-list.sql  20241124_01_81y4a-add-directory.sql  20241128_01_tHqS5-delete-file.sql  20241130_01_lGp9f-delete-file.sql  20241130_02_sil2i-delete-active-sessions.sql  20241130_03_kIAu5-get-users-list.sql  20241201_01_vORjN-get-group-list.sql  20241201_02_LYBkS-add-user-to-group.sql  20241201_03_xzTIa-create-group.sql  20241201_04_eCFXD-delete-group.sql  20241201_05_qJGhH-add-file-to-group.sql  20241202_01_nu78A-changerigts.sql  20241202_02_hMVZK-isroot.sql  20241203_01_EN33C-file-operations.sql  20241203_02_7lp51-add-events.sql  20241205_01_putKy-description.sql
db/: init.sql
src/app/: CMakeLists.txt  app_win.ui  app_win.ui.autosave  command_handler.cpp  command_handler.h  hello_w.cpp  hello_w.h  hello_w.ui  hello_window.cpp  hello_window.h  main.cpp  main_window.cpp  main_window.h  registration_w.cpp  registration_w.h  test.json
src/app/resources/: resources.qrc  styles.qss
src/common/: message.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h  test.json  thread_pool.cpp  thread_pool.h
